--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author-avatar:
 # Contact links
 facebook:  https://facebook.com/ # Add your Facebook handle
 twitter:   https://twitter.com/ # Add your Facebook handle
-instagram: https://www.instagram.com/ # Add your Facebook handle
+instagram: https://www.instagram.com/maen_x # Add your Facebook handle
 pinterest: https://www.pinterest.com/ # Add your Facebook handle
 
 
