--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #-------------------------------
 # About Section
 author-name:   Maen_X
-author-avatar: 
+author-avatar: profile.jpeg
 
 
 #-------------------------------
